--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Setup and test with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: [test, coverage]
+          arguments: test
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v2
