--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
   ],
   "java.settings.url": ".vscode/vscode-java.prefs",
   "java.format.settings.url": ".vscode/eclipse-java-google-style.xml",
-  "java.project.sourcePaths": ["src/main/java", "src/test/java", ""],
+  "java.project.sourcePaths": ["src/main/java", "src/test/java", "src/main/resources", ""],
   "java.configuration.updateBuildConfiguration": "interactive",
   "[java]": {
     "editor.detectIndentation": false,
